--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
     "@types/three": "^0.178.1",
+    "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.23.6",
     "leva": "^0.10.0",
     "next": "15.4.1",
