--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/cannon": "^6.6.0",
-    "@react-three/drei": "^10.5.1",
-    "@react-three/fiber": "^9.2.0",
+    "@react-three/cannon": "^6.4.0",
+    "@react-three/drei": "^9.80.2",
+    "@react-three/fiber": "^8.13.5",
     "@types/three": "^0.178.1",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.23.6",
     "leva": "^0.10.0",
     "next": "15.4.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "stats.js": "^0.17.0",
-    "three": "^0.178.0"
+    "three": "^0.178.0",
+    "three-mesh-bvh": "^0.8.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/stats.js": "^0.17.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
