--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 
 # testing
 /coverage
+*.test.js.snap
+/.nyc_output
 
 # next.js
 /.next/
@@ -19,19 +21,26 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
 *.pem
+.AppleDouble
+.LSOverride
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+lerna-debug.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
+!.env.local.example
+!.env.production.example
 
 # vercel
 .vercel
@@ -39,3 +48,70 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# database files
+*.db
+*.sqlite
+*.sqlite3
+*.db-shm
+*.db-wal
+/prisma/*.db
+/prisma/*.db-shm
+/prisma/*.db-wal
+
+# logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+*.sublime-workspace
+*.sublime-project
+
+# Credentials & Secrets (SECURITY)
+credentials*.json
+*-credentials.json
+service-account*.json
+*secret*.json
+*token*.json
+*.key
+*.pem
+*.p12
+*.pfx
+*.cer
+*.crt
+
+# Temporary files
+*.tmp
+*.temp
+.cache
+.parcel-cache
+
+# Build artifacts
+.next
+out
+build
+dist
