--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "@react-three/cannon": "^6.4.0",
     "@react-three/drei": "^9.112.0",
     "@react-three/fiber": "^8.17.10",
+    "@sendgrid/mail": "^8.1.6",
     "@types/three": "^0.180.0",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cuid": "^3.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "googleapis": "^164.1.0",
@@ -49,7 +53,6 @@
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
     "three-mesh-bvh": "^0.9.1",
-    "xlsx": "^0.18.5",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
@@ -60,6 +63,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.9.1",
     "@types/nodemailer": "^7.0.2",
+    "@types/quill": "^2.0.14",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/stats.js": "^0.17.4",
@@ -67,5 +71,8 @@
     "eslint-config-next": "^15.5.6",
     "tailwindcss": "^4.1.15",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "quill": "2.0.2"
   }
 }
