--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": ">=10.0.0"
   },
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
@@ -22,9 +22,10 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@react-three/cannon": "^6.4.0",
-    "@react-three/drei": "^9.112.0",
-    "@react-three/fiber": "^8.17.10",
+    "@react-three/cannon": "^6.6.0",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^9.0.0-beta.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@sendgrid/mail": "^8.1.6",
     "@types/three": "^0.180.0",
     "@upstash/ratelimit": "^1.2.1",
@@ -46,8 +47,8 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.9",
     "prisma": "^6.17.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-quill": "^2.0.0",
     "resend": "^6.2.0",
     "stats.js": "^0.17.0",
@@ -65,8 +66,8 @@
     "@types/node": "^24.9.1",
     "@types/nodemailer": "^7.0.2",
     "@types/quill": "^2.0.14",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/stats.js": "^0.17.4",
     "eslint": "^9.38.0",
     "eslint-config-next": "^15.5.6",
