--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "commit": "./commit.sh",
+    "qc": "./qc.sh"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.67.0",
