--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.9",
+    "openai": "^6.9.1",
     "prisma": "^6.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
