--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "next lint",
     "postinstall": "prisma generate",
     "commit": "./commit.sh",
-    "qc": "./qc.sh"
+    "qc": "./qc.sh",
+    "upstash:ping": "tsx scripts/keep-upstash-active.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.67.0",
@@ -75,6 +76,7 @@
     "eslint": "^9.38.0",
     "eslint-config-next": "^15.5.6",
     "tailwindcss": "^4.1.15",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "overrides": {
