--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-quill": "^2.0.0",
+    "react-rnd": "^10.5.2",
     "resend": "^6.2.0",
     "stats.js": "^0.17.0",
     "tailwind-merge": "^3.3.1",
