--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@anthropic-ai/sdk": "^0.67.0",
     "@auth/prisma-adapter": "^2.11.0",
     "@headlessui/react": "^2.2.9",
+    "@notionhq/client": "^5.6.0",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-three/cannon": "^6.6.0",
@@ -76,6 +78,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/stats.js": "^0.17.4",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.38.0",
     "eslint-config-next": "^15.5.6",
     "tailwindcss": "^4.1.15",
